# tator-py

./: .gitignore  MANIFEST.in  README.md  codegen.py  config.json  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: Algorithm.md  AlgorithmApi.md  AlgorithmLaunch.md  AlgorithmLaunchResponse.md  AlgorithmLaunchSpec.md  AlgorithmList.md  AlgorithmListInner.md  AlphaRange.md  Analysis.md  AnalysisApi.md  AnalysisList.md  AnalysisListInner.md  AnalysisSpec.md  AttributeBulkUpdate.md  AttributeType.md  AttributeTypeApi.md  AttributeTypeList.md  AttributeTypeOneOf.md  AttributeTypeOneOf1.md  AttributeTypeOneOf2.md  AttributeTypeOneOf3.md  AttributeTypeOneOf4.md  AttributeTypeOneOf5.md  AttributeTypeOneOf6.md  AttributeTypeSpec.md  AttributeTypeUpdate.md  AttributeValue.md  AutocompleteService.md  BadRequestResponse.md  Body.md  Body1.md  Body10.md  Body11.md  Body12.md  Body13.md  Body14.md  Body15.md  Body16.md  Body17.md  Body18.md  (+281 more)
examples/: README.md  activities.py  add_local_transcoded_file.py  copy_streaming_file.py  create_analytics_annotations.py  create_analytics_collections.py  create_analytics_test_project.py  create_multi_video.py  delete_dupes.py  disk_usage_histogram.py  download_media.py  download_temporary_file.py  find_empty_media.py  hours_per_section.py  import_tator_native.py  launch_algorithm.py  leaf.py  leaf.yaml  localization_attribute_addition.py  localizations.py  location_query.py  make_file_summary.py  make_summary.py  migrate.py  move_to_new_section.py  platform_stats.py  project_to_disk.py  register_algorithm.py  register_applet.py  register_dashboard.py  register_report.py  setup_project.py  tracks.py  update_applet.py  update_dashboard.py  upload_media.py  upload_media_archive.py  upload_temporary_file.py  video_clips.py  video_frames.py
tator/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  version.py
tator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: __init__api.mustache  __init__model.mustache  __init__package.mustache  api.mustache  api_client.mustache  configuration.mustache  model.mustache  rest.mustache
test/: _common.py  conftest.py  test_a_float_array.py  test_algorithm.py  test_algorithm_api.py  test_algorithm_launch.py  test_algorithm_launch_response.py  test_algorithm_launch_spec.py  test_algorithm_list.py  test_algorithm_list_inner.py  test_alpha_range.py  test_alt_bucket.py  test_analysis.py  test_analysis_api.py  test_analysis_list.py  test_analysis_list_inner.py  test_analysis_spec.py  (+360 more)
(+582 files in other folders)
